# archdrop-beta

./: APPSTATE_REFACTORING.md  ARCHITECTURE.md  CODEBASE_GUIDE.md  CODE_REVIEW.md  COMPLETE_RECEIVE_RS.md  Cargo.toml  DEEP_DIVE_FIXES.md  DETAILED_ANALYSIS.md  IMPLEMENTATION_GUIDE.md  IMPLEMENTATION_WALKTHROUGH.md  KB_TO_TB_ARCHITECTURE.md  NETWORK_RESILIENCE_ANALYSIS.md  README.md  REFACTORING_REPORT.md  RESUME_BULLETS.md  TEMP_STORAGE_ANALYSIS.md  metrics.sh  readme.md
docs/: API.md  ARCHITECTURE.md  CONTRIBUTING.md  DEVELOPMENT.md  SECURITY.md  TROUBLESHOOTING.md
src/: crypto.rs  errors.rs  lib.rs  main.rs  manifest.rs  qr.rs  server.rs  session.rs  tui.rs  tunnel.rs  types.rs
src/crypto/: decrypt.rs  encrypt.rs  encryption.rs  mod.rs  stream.rs  types.rs
src/server/: api.rs  auth.rs  handlers.rs  helpers.rs  mod.rs  modes.rs  routes.rs  runtime.rs  session.rs  state.rs  static_files.rs  utils.rs  web.rs
src/transfer/: chunk.rs  io.rs  manifest.rs  mod.rs  receive.rs  receive_handlers.rs  security.rs  send.rs  send_handlers.rs  storage.rs  util.rs
src/ui/: mod.rs  output.rs  qr.rs  tui.rs
templates/: app.js  download.html  download.js  shared.js  styles.css  upload.html  upload.js
templates/download/: download.html  download.js  index.html
templates/shared/: crypto.js
templates/upload/: index.html  upload.html  upload.js
tests/: crypto_tests.rs  decryption_tests.rs  encryption_storage_tests.rs  hash_tests.rs  integration_test.rs  manifest_tests.rs  session_tests.rs
tests/traverse/: util.rs
