[package]
name = "archdrop"
version = "0.1.0"
edition = "2024"

[dependencies]
axum = "0.7"
tokio = { version = "1", features = ["full"] }
uuid = { version = "1.6", features = ["v4"] }
clap = { version = "4.4", features = ["derive"] }
chrono = "0.4"
aes-gcm = { version = "0.10", features = ["stream"] } 
base64 = "0.21"
rand = "0.8"
futures = "0.3"
sha2 = "0.10.9"
qrcode = "0.13"
ratatui = "0.26"
crossterm = "0.27"
hostname = "0.4"
axum-server = { version = "0.7", features = ["tls-rustls"] }
rcgen = "0.12"
reqwest = "0.12"
zip = "2.2"
walkdir = "2.5"
regex = "1"
indicatif = "0.17"
console = "0.15"
