[package]
name = "archdrop"
version = "0.1.0"
edition = "2021"

[dependencies]
axum = { version = "0.7", features = ["multipart"] }
tokio = { version = "1", features = ["full"] }
uuid = { version = "1.6", features = ["v4"] }
clap = { version = "4.4", features = ["derive"] }
chrono = "0.4"
aes-gcm = { version = "0.10", features = ["stream"] } 
base64 = "0.21"
rand = "0.8"
futures = "0.3"
sha2 = "0.10.9"
qrcode = "0.13"
ratatui = "0.26"
crossterm = "0.27"
hostname = "0.4"
axum-server = { version = "0.7", features = ["tls-rustls"] }
rcgen = "0.12"
reqwest = { version = "0.12", features = ["json"] }
zip = "2.2"
walkdir = "2.5"
indicatif = "0.17"
console = "0.15"
anyhow = "1.0"
sysinfo = "0.30"
serde_json = "1.0"
serde = "1.0"
tempfile = "3.23.0"
hex = "0.4.3"
dashmap = "6.0"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "fmt"] }
tokio-util = "0.7"
axum_typed_multipart = "0.13"

[dev-dependencies]
reqwest = { version = "0.12", features = ["json", "multipart"] }

